[package]
name = "django-signing"
version = "0.0.0"
authors = ["Markus Holtermann <info@markusholtermann.eu>"]
edition = "2021"
description = "A Rust implementation of Django's signing module"
repository = "https://github.com/MarkusH/django-signing-rust"
license-file = "LICENSE"
keywords = ["crypto", "signature", "signing", "django"]

[dependencies]
base62 = "1.1.5"
base64 = "0.13.0"
flate2 = "1.0.22"
digest = { version = "0.10.1", features = ["mac"] }
hmac = "0.12.0"
serde = { version = "1.0.132" }
serde_json = "1.0"
sha2 = "0.10.0"
time = "0.3.5"
